--- a/index.html
+++ b/index.html
@@ -53,9 +53,36 @@
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                         </div>
                 </div>
-            
             </div>
         </div>
     </section>
+    <!-- section 2: Develop without limits -->
+    <section class="section2">
+        <div class="main-wrap">
+            <div class="wrap flex">
+                <img src="./images/pictures/coding.png" alt="">
+                <div class="section2-content">
+                    <h2>Develop <br>Without Limits</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <button>Read the Documentation</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 3: Know out Global Community -->
+    <section class="section2">
+        <div class="main-wrap">
+            <div class="wrap flex">
+                <div class="section2-content">
+                    <h2>Know our <br>Global Community</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <button>Read the Documentation</button>
+                </div>
+                <img src="./images/pictures/project.png" alt="">
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
