--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
             </div>
         </div>
     </section>
-
+    <!-- Footer -->
+    <footer>
+        <h3>Mission <span class="color2">2022</span></h3>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 
 </body>
 </html>
