added favicon and changed photos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- favincon -->
+    <link rel="shortcut icon" href="./images/icon/favicon-32x32.png" type="image/x-icon">
     <!-- my stylesheet link -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +27,7 @@
                     <button>Explore Now</button>
                     <p>Scroll down to explore more about us</p>
                 </div>
-                <img src="./images/person/person-2.png" alt="">
+                <img src="./images/person/mmh-with-bg-1.png" alt="">
             </div>
         </div>
     </header>
@@ -60,7 +62,7 @@
     <section class="section2">
         <div class="main-wrap">
             <div class="wrap flex">
-                <img src="./images/pictures/coding.png" alt="">
+                <img src="./images/pictures/coding1.png" alt="">
                 <div class="section2-content">
                     <h2>Develop <br>Without Limits</h2>
                     <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
@@ -78,7 +80,7 @@
                     <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
                     <button>Read the Documentation</button>
                 </div>
-                <img src="./images/pictures/project.png" alt="">
+                <img src="./images/pictures/project1.png" alt="">
             </div>
         </div>
     </section>
