--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- favincon -->
-    <link rel="shortcut icon" href="./images/icon/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/icon/apple-touch-icon.png" type="image/x-icon">
     <!-- my stylesheet link -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -23,7 +23,7 @@
                 <div class="header-content">
                     <div class="border-left"></div>
                     <h1>Stay Focused on <br><span class="color1">Mission 2022</span></h1>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p>Our mission is to provide our clients with the utmost satisfaction. By doing so, we treat every client's website with care. We strive for a modern website layout and high organic search engine rankings.</p>
                     <button>Explore Now</button>
                     <p>Scroll down to explore more about us</p>
                 </div>
@@ -42,17 +42,17 @@
                         <div class="card card1">
                             <img src="./images/illustrators/illustrator-1.png" alt="">
                             <h3>Mission</h3>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <p>Being professional web development, mobile application and digital marketing company. Our mission is to provide customer-centric, result-oriented, cost-competitive innovative & functional IT Solutions to our valuable global clients.</p>
                         </div>
                         <div class="card card2">
                             <img src="./images/illustrators/illustrator-2.png" alt="">
-                            <h3>Vission</h3>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <h3>Vision</h3>
+                            <p>Our vision is to be the largest global mobile/web development company. Focused on constant innovation as our key for achieving the ultimate goal of success and emerge as globally recognized company by providing the superior quality services and solutions.</p>
                         </div>
                         <div class="card card3">
                             <img src="./images/illustrators/illustrator-3.png" alt="">
                             <h3>Goals</h3>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <p>Our goal is to enhance business growth of our customers with creative design, development and to deliver market defining high quality solutions.</p>
                         </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                 <img src="./images/pictures/coding1.png" alt="">
                 <div class="section2-content">
                     <h2>Develop <br>Without Limits</h2>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s success—that, and our shared commitment to developing and strengthening the afterschool profession.</p>
                     <button>Read the Documentation</button>
                 </div>
             </div>
@@ -77,7 +77,7 @@
             <div class="wrap flex">
                 <div class="section2-content">
                     <h2>Know our <br>Global Community</h2>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                    <p>If you want to grow as a developer, I can't over-emphasize the benefits of joining a developer community. There are many advantages, from peer-programming to sharing knowledge, mentorship, sharing support, sharing tools, code reviews, answering questions, and much more.</p>
                     <button>Read the Documentation</button>
                 </div>
                 <img src="./images/pictures/project1.png" alt="">
