--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission 2022</title>
     <!-- google fonts link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- favincon -->
     <link rel="shortcut icon" href="./images/icon/apple-touch-icon.png" type="image/x-icon">
     <!-- my stylesheet link -->
@@ -81,6 +78,32 @@
                     <button>Read the Documentation</button>
                 </div>
                 <img src="./images/pictures/project1.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Our services -->
+    <section class="service">
+        <div class="main-wrap">
+            <div class="wrap">
+                <h1>Services</h1>
+                <div class="flex">
+                    <div class="design">
+                        <img src="./images/icon/screen.png" alt="">
+                        <h2>DESIGN</h2>
+                        <p>I can design the website based on your needs and suggestions. I can also create it from scratch by consulting with you during work.</p>
+                    </div>
+                    <div class="development">
+                        <img src="./images/icon/app-development.png" alt="">
+                        <h2>DEVELOPMENT</h2>
+                        <p>I can design the site based on your needs and suggestions. I can also design the site from scratch and consult you during the job.</p>
+                    </div>
+                    
+                    <div class="maintenance">
+                        <img src="./images/icon/growth.png" alt="">
+                        <h2>MAINTENANCE</h2>
+                        <p>I can design the site based on your needs and suggestions. I can also design the site from scratch and consult you during the job.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
