--- a/index.html
+++ b/index.html
@@ -95,16 +95,31 @@
                     <div class="development">
                         <img src="./images/icon/app-development.png" alt="">
                         <h2>DEVELOPMENT</h2>
-                        <p>I can design the site based on your needs and suggestions. I can also design the site from scratch and consult you during the job.</p>
+                        <p>I can develop the site based on your needs and suggestions. I can also develop the site from scratch and consult you during the job.</p>
                     </div>
                     
                     <div class="maintenance">
                         <img src="./images/icon/growth.png" alt="">
                         <h2>MAINTENANCE</h2>
-                        <p>I can design the site based on your needs and suggestions. I can also design the site from scratch and consult you during the job.</p>
+                        <p>I can mainten the site based on your needs and suggestions. and  I can also mainten the site from scratch and consult you during the job.</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- Contact -->
+    <section class="contact">
+        <div class="wrapper">
+            <form action="">
+                <h2 class="color1">Write Us</h2>
+                <b>Name</b><br>
+                <input type="text" name="" id="" placeholder="Enter your name"><br>
+                <b>Email</b><br>
+                <input type="email" name="" id="" placeholder="Enter Your email"><br>
+                <b>Write your massege</b><br>
+                <textarea name="" id="" cols="30" rows="10"></textarea><br>
+                <button>Submit</button>
+            </form>
         </div>
     </section>
     <!-- Footer -->
