--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission 2022</title>
     <!-- google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <!-- favincon -->
     <link rel="shortcut icon" href="./images/icon/apple-touch-icon.png" type="image/x-icon">
     <!-- my stylesheet link -->
@@ -125,8 +128,7 @@
     <!-- Footer -->
     <footer>
         <h3>Mission <span class="color2">2022</span></h3>
-        <p>Hard work, Perseverance, and Determination for 2022</p>
+        <p>&copy; Mukarrom Hosain, Bhairab, Kishoreganj, Dhaka, Bangladesh</p>
     </footer>
-
 </body>
 </html>
